--- a/src/main/resources/fxml/email_cell.fxml
+++ b/src/main/resources/fxml/email_cell.fxml
@@ -7,38 +7,39 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<fx:root graphicTextGap="0.0" prefHeight="100.0" prefWidth="300.0" styleClass="email-cell" type="javafx.scene.control.ListCell" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root editable="false" focusTraversable="false" graphicTextGap="0.0" prefHeight="100.0" prefWidth="300.0" styleClass="email-cell" type="javafx.scene.control.ListCell" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
 <graphic>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="email-cell-pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="100.0" fitWidth="301.0" layoutX="-1.0" opacity="0.3" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="100.0" fitWidth="301.0" layoutX="-1.0" opacity="0.57" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../img/email-cell-template.png" />
          </image>
       </ImageView>
-      <Label id="email-cell-name" fx:id="sender" layoutX="24.0" layoutY="11.0" prefHeight="17.0" prefWidth="177.0">
+      <Label id="email-cell-name" fx:id="sender" focusTraversable="false" layoutX="24.0" layoutY="11.0" prefHeight="17.0" prefWidth="177.0">
                <styleClass>
                   <String fx:value="font-rockwell" />
                   <String fx:value="font-grey" />
                </styleClass></Label>
-      <Label id="email-cell-date" fx:id="date" layoutX="222.0" layoutY="11.0" prefHeight="17.0" prefWidth="61.0">
+      <Label id="email-cell-date" fx:id="date" alignment="CENTER_RIGHT" focusTraversable="false" layoutX="222.0" layoutY="11.0" prefHeight="17.0" prefWidth="61.0">
                <styleClass>
                   <String fx:value="font-rockwell" />
                   <String fx:value="font-grey" />
                </styleClass></Label>
-      <Label id="email-cell-title" fx:id="title" layoutX="24.0" layoutY="29.0" prefHeight="17.0" prefWidth="192.0">
+      <Label id="email-cell-title" fx:id="title" focusTraversable="false" layoutX="24.0" layoutY="29.0" prefHeight="17.0" prefWidth="192.0">
                <styleClass>
                   <String fx:value="font-rockwell" />
                   <String fx:value="font-bold" />
                </styleClass></Label>
-      <ImageView id="email-cell-focused" fx:id="selected" fitHeight="100.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <TextArea id="email-cell-message" fx:id="message" editable="false" layoutX="20.0" layoutY="48.0" mouseTransparent="true" prefHeight="37.0" prefWidth="219.0" wrapText="true">
+      <TextArea id="email-cell-message" fx:id="message" editable="false" focusTraversable="false" layoutX="15.0" layoutY="48.0" mouseTransparent="true" prefHeight="43.0" prefWidth="219.0" wrapText="true">
                <styleClass>
                   <String fx:value="font-rockwell" />
                   <String fx:value="font-grey" />
                </styleClass></TextArea>
       <ImageView id="email-cell-clip" fx:id="attachment" fitHeight="34.0" fitWidth="33.0" layoutX="257.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" />
+            <Pane id="email-cell-focused" fx:id="selected" layoutY="-1.0" prefHeight="100.0" prefWidth="10.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
 </graphic>
