--- a/src/main/resources/css/themeDefault.css
+++ b/src/main/resources/css/themeDefault.css
@@ -41,6 +41,7 @@
 	-fx-background-color: white-color;
 }
 
+
 .email-cell:empty {
 	visibility: hidden;
 }
@@ -58,9 +59,9 @@
 	-fx-border-color: transparent;
 }
 
-#email-cell-focused {
+ #email-cell-focused {
 	-fx-background-color: teal-color;
-}
+} 
 
 #message-long-view .scroll-bar {
 	visibility: hidden;
@@ -73,14 +74,50 @@
 	-fx-font-size: 15;
 }
 
+.tree-cell:focused > .tree-disclosure-node > .arrow,
+.tree-cell:expanded > .tree-disclosure-node > .arrow  {
+	 -fx-background-color: folder-selected-color;
+	 visibility: hidden;
+	 -fx-opacity:0;
+	 -fx-scale-x: 0;
+
+ }
+
+
 #folder-view .tree-cell:hover {
+/*	-fx-graphic: url("../img/default/hover/at-hover.png"); */
 	-fx-text-fill: teal-color;
 }
 
 #folder-view .tree-cell:focused {
+	
 	-fx-background-color: folder-selected-color;
 	-fx-text-fill: teal-color;
 }
+
+/* Folder Icons */
+
+#gmail-folder { -fx-image: url("../img/default/idle/at.png"); }
+#inbox-folder { -fx-image: url("../img/default/idle/inbox.png"); }
+#all-folder { -fx-image: url("../img/default/idle/mail.png"); }
+#sent-folder { -fx-image: url("../img/default/idle/sent.png"); }
+#spam-folder { -fx-image: url("../img/default/idle/spam.png"); }
+#important-folder { -fx-image: url("../img/default/idle/flag.png"); }
+#draft-folder { -fx-image: url("../img/default/idle/draft.png"); }
+#star-folder { -fx-image: url("../img/default/idle/star-folder.png"); }
+#trash-folder { -fx-image: url("../img/default/idle/trash-folder.png"); }
+
+.tree-cell:hover > #gmail-folder, .tree-cell:focused > #gmail-folder { -fx-image: url("../img/default/hover/at.png"); }
+.tree-cell:hover > #inbox-folder, .tree-cell:focused > #inbox-folder { -fx-image: url("../img/default/hover/inbox.png"); }
+.tree-cell:hover > #all-folder, .tree-cell:focused > #all-folder { -fx-image: url("../img/default/hover/mail.png"); }
+.tree-cell:hover > #sent-folder, .tree-cell:focused > #sent-folder { -fx-image: url("../img/default/hover/sent.png"); }
+.tree-cell:hover > #spam-folder, .tree-cell:focused > #spam-folder { -fx-image: url("../img/default/hover/spam.png"); }
+.tree-cell:hover > #important-folder, .tree-cell:focused > #important-folder { -fx-image: url("../img/default/hover/flag.png"); }
+.tree-cell:hover > #draft-folder, .tree-cell:focused > #draft-folder { -fx-image: url("../img/default/hover/draft.png"); }
+.tree-cell:hover > #star-folder, .tree-cell:focused > #star-folder { -fx-image: url("../img/default/hover/star-folder.png"); }
+.tree-cell:hover > #trash-folder, .tree-cell:focused > #trash-folder { -fx-image: url("../img/default/hover/trash-folder.png"); }
+
+
 
 .list-view .scroll-bar:vertical,
 .list-view .scroll-bar:horizontal {
@@ -165,3 +202,30 @@
 	-fx-scale-y: 0.018;
 	-fx-background-color: transparent;
 }
+
+/* Attachments */
+
+#attachment-list {
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+}
+
+#attachments-label {
+	
+}
+
+.attach-cell {
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+}
+
+.attach-cell:empty {
+	visibility: hidden;
+}
+
+#attach-label {
+	-fx-font-family: 'Rockwell';
+}
+
+
+
