--- a/src/main/resources/fxml/attachment_cell.fxml
+++ b/src/main/resources/fxml/attachment_cell.fxml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListCell?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.ListCell?>
 
-<fx:root editable="false" focusTraversable="false" graphicTextGap="0.0" prefHeight="111.0" prefWidth="85.0" styleClass="email-cell" type="javafx.scene.control.ListCell" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root editable="false" focusTraversable="false" graphicTextGap="0.0" prefHeight="111.0" prefWidth="85.0" type="javafx.scene.control.ListCell" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
 <graphic>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="111.0" prefWidth="85.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="attach-pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="111.0" prefWidth="85.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="attachmentName" layoutX="11.0" layoutY="84.0" prefHeight="17.0" prefWidth="64.0" />
-      <ImageView fx:id="attachmentImg" fitHeight="61.0" fitWidth="61.0" layoutX="12.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" />
+      <Label id="attach-label" fx:id="attachmentName" layoutX="11.0" layoutY="84.0" prefHeight="17.0" prefWidth="64.0" />
+      <ImageView id="attach-view" fx:id="attachmentImg" fitHeight="61.0" fitWidth="61.0" layoutX="12.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
 </graphic>
+   <styleClass>
+      <String fx:value="email-cell" />
+      <String fx:value="attach-cell" />
+   </styleClass>
 </fx:root>
