fixed thumbnail bug, added a message search bar, added new icons and styles

--- a/src/main/resources/css/themeDefault.css
+++ b/src/main/resources/css/themeDefault.css
@@ -10,6 +10,7 @@
 	dark-grey-color: #999999;
 	white-color: white;
 	teal-color: #98c0bb;
+	selection-grey: #d1d1d1
 }
 
 /*** Text ***/
@@ -37,7 +38,7 @@
 #main-window-pane { -fx-background-color: white-color; }
 #account-pane { -fx-background-color: dark-blue-color; }
 #compose-key-pane { -fx-background-color: mid-blue-color; }
-#compose-key { -fx-background-color: teal-color; }
+
 
 /*** Email Selection ***/
 
@@ -79,10 +80,12 @@
 
 /*** Folder Selection ***/
 
-#folder-view * {
+#folder-view *, #folder-view, #folder-view:focused{
 	-fx-background-color: mid-blue-color;
 	-fx-text-fill: white-color;
+	-fx-border-color: transparent;
 }
+#folder-view, #folder-view:focused {  }
 #folder-view .tree-cell:hover { -fx-text-fill: teal-color; }
 #folder-view .tree-cell:focused { -fx-background-color: folder-selected-color; -fx-text-fill: teal-color; }
 .tree-cell:focused > .tree-disclosure-node > .arrow,
@@ -93,11 +96,28 @@
 	 -fx-scale-x: 0;
  }
  
- /*** Settings ***/
+/*** Composer Window ***/
+  
+#editor { -fx-background-color: white-color; }
+#editor  .top-toolbar, .bottom-toolbar {-fx-background-color: transparent}
+#editor .grid, .combo-box *, .color-picker .arrow-button .arrow { -fx-background-color: transparent; }
+.combo-box .arrow-button .arrow {-fx-background-color: black; }
  
- #settings-pane { -fx-background-color: dark-blue-color; }
- 
- /* Attachments */
+#editor * .button, .html-editor-align-justify, .html-editor-outdent, .html-editor-indent,
+.html-editor-align-left, .html-editor-align-center, .html-editor-align-right,
+.html-editor-bullets, .html-editor-numbers, .html-editor-foreground, .html-editor-background, .font-menu-button,
+.font-menu-button *, .html-editor-underline, .html-editor-strike, .html-editor-italic, .html-editor-bold {
+	-fx-background-color: mid-grey-color;
+}
+
+#editor * .button:hover, .html-editor-align-justify:hover, .html-editor-outdent:hover, .html-editor-indent:hover,
+.html-editor-align-left:hover, .html-editor-align-center:hover, .html-editor-align-right:hover,
+.html-editor-bullets:hover, .html-editor-numbers:hover, .html-editor-foreground:hover, .html-editor-background:hover, .font-menu-button:hover,
+.font-menu-button *:hover, .html-editor-underline:hover, .html-editor-strike:hover, .html-editor-italic:hover, .html-editor-bold:hover {
+	-fx-background-color: selection-grey;
+}
+
+/* Attachments */
 
 #attach-label { -fx-font-family: 'Rockwell'; }
 .attach-cell:empty { visibility: hidden; }
@@ -110,6 +130,10 @@
 	-fx-background-color: transparent;
 	-fx-border-color: transparent;
 }
+
+/*** Settings ***/
+ 
+#settings-pane { -fx-background-color: dark-blue-color; }
 
 /* Icons */
 
@@ -135,6 +159,24 @@
 
 #paper-clip { -fx-image: url("../img/default/idle/paper-clip.png"); }
 
+#settings-key {
+	-fx-graphic: url('../img/default/idle/settings.png');
+	-fx-scale-x: 0.04;
+	-fx-scale-y: 0.04;
+	-fx-translate-x: -203;
+	-fx-translate-y: -205;
+	-fx-background-color: transparent;
+}
+
+#settings-key:hover {
+	-fx-graphic: url('../img/default/hover/settings.png');
+	-fx-scale-x: 0.04;
+	-fx-scale-y: 0.04;
+	-fx-translate-x: -203;
+	-fx-translate-y: -205;
+	-fx-background-color: transparent;
+}
+
 #key-trash {
 	-fx-graphic: url('../img/default/idle/trash.png');
 	-fx-scale-x: 0.02;
@@ -158,5 +200,102 @@
 	-fx-scale-x: 0.018;
 	-fx-scale-y: 0.018;
 	-fx-background-color: transparent;
+}
+
+#send-key {
+	-fx-graphic: url('../img/default/idle/send-message.png');
+	-fx-scale-x: 0.09;
+	-fx-scale-y: 0.09;
+	-fx-background-color: transparent;
+}
+
+#send-key:hover {
+	-fx-graphic: url('../img/default/hover/send-message.png');
+	-fx-scale-x: 0.09;
+	-fx-scale-y: 0.09;
+	-fx-background-color: transparent;
+}
+
+#attach-key {
+	-fx-graphic: url('../img/default/idle/attach-message.png');
+	-fx-scale-x: 0.08;
+	-fx-scale-y: 0.08;
+	-fx-background-color: transparent;
+}
+
+#attach-key:hover {
+	-fx-graphic: url('../img/default/hover/attach-message.png');
+	-fx-scale-x: 0.08;
+	-fx-scale-y: 0.08;
+	-fx-background-color: transparent;
+}
+
+#compose-key { 
+	-fx-background-color: transparent;
+	-fx-background-image: url('../img/default/idle/compose-key.png');
+	-fx-background-size: 139px;  
+	-fx-background-repeat: no-repeat;
+	-fx-background-position: center;
+}
+
+#compose-key:hover { 
+	-fx-background-color: transparent;
+	-fx-background-image: url('../img/default/hover/compose-key.png');
+	-fx-background-size: 139px;  
+	-fx-background-repeat: no-repeat;
+	-fx-background-position: center;
+}
+
+#compose-cancel-key {
+	-fx-graphic: url('../img/default/idle/cancel-message.png');
+	-fx-scale-x: 0.08;
+	-fx-scale-y: 0.08;
+	-fx-background-color: transparent;
+}
+
+#compose-cancel-key:hover {
+	-fx-graphic: url('../img/default/hover/cancel-message.png');
+	-fx-scale-x: 0.08;
+	-fx-scale-y: 0.08;
+	-fx-background-color: transparent;
+}
+
+#compose-attached-icon {
+	-fx-image: url('../img/default/idle/attached-message.png');
+	-fx-scale-x: 0.9;
+	-fx-scale-y: 0.9;
+}
+
+#field-send-to,  #field-title {
+ 	-fx-background-color: transparent;
+ 	-fx-background-image: url("../img/default/idle/composer-field.png");
+ 	-fx-background-size: 469px;  
+	-fx-background-repeat: no-repeat;
+	-fx-background-position: center;	
+}
+
+#field-send-to:hover,  #field-title:hover,
+#field-send-to:focused,  #field-title:focused {
+ 	-fx-background-color: transparent;
+ 	-fx-background-image: url("../img/default/hover/composer-field.png");
+ 	-fx-background-size: 469px;  
+	-fx-background-repeat: no-repeat;
+	-fx-background-position: center;	
+}
+
+#search-bar { 
+	-fx-background-color: transparent;
+	-fx-background-image: url('../img/default/idle/search-bar.png');
+	-fx-background-size: 232px;  
+	-fx-background-repeat: no-repeat;
+	-fx-background-position: center;
+}
+
+#search-bar:hover { 
+	-fx-background-color: transparent;
+	-fx-background-image: url('../img/default/hover/search-bar.png');
+	-fx-background-size: 232px;  
+	-fx-background-repeat: no-repeat;
+	-fx-background-position: center;
 }
 
