--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -14,35 +15,23 @@
 <?import javafx.scene.web.HTMLEditor?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane id="main-window-pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="674.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="main-window-pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="674.0" prefWidth="1000.0" stylesheets="@../css/themeDefault.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="672.0" fitWidth="1200.0" layoutX="260.0" layoutY="287.0" opacity="0.36" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <image>
-            <Image url="@../img/EmailUI.png" />
-         </image>
-      </ImageView>
-      <AnchorPane id="settings-pane" layoutX="4.0" prefHeight="30.0" prefWidth="492.0" AnchorPane.bottomAnchor="642.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="508.0" AnchorPane.topAnchor="0.0" />
-      <TreeView id="folder-view" fx:id="folderSelection" layoutY="113.0" prefHeight="491.0" prefWidth="190.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="113.0">
-         <styleClass>
-            <String fx:value="font-myriad" />
-            <String fx:value="font-white" />
-         </styleClass></TreeView>
-      <ListView id="email-cell-view" fx:id="emailSelection" focusTraversable="false" layoutX="190.0" prefHeight="674.0" prefWidth="302.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="30.0" />
       <ImageView fx:id="defaultMessageViewBG" fitHeight="376.0" fitWidth="376.0" layoutX="552.0" layoutY="149.0">
          <image>
             <Image url="@../img/EmailBackground-01.png" />
          </image>
       </ImageView>
-      <Pane id="compose-key-pane" layoutY="30.0" prefHeight="84.0" prefWidth="190.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="30.0">
-         <children>
-            <Button id="compose-key" layoutX="23.0" layoutY="23.0" mnemonicParsing="false" onAction="#composeKeyPressed" prefHeight="38.0" prefWidth="139.0" text="COMPOSE">
-               <styleClass>
-                  <String fx:value="font-rockwell" />
-                  <String fx:value="font-bold" />
-                  <String fx:value="font-white" />
-               </styleClass></Button>
-         </children>
-      </Pane>
+      <ImageView fitHeight="705.0" fitWidth="1000.0" layoutX="4.0" layoutY="-29.0" opacity="0.57" visible="false">
+         <image>
+            <Image url="@../img/EmailUIcompose.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="672.0" fitWidth="1200.0" layoutX="260.0" layoutY="287.0" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../img/EmailUI.png" />
+         </image>
+      </ImageView>
       <AnchorPane id="message-pane" fx:id="messagePane" layoutX="492.0" layoutY="159.0" prefHeight="200.0" prefWidth="508.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="492.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="messageDate" alignment="TOP_RIGHT" layoutX="340.0" layoutY="14.0" prefHeight="17.0" prefWidth="139.0">
@@ -78,16 +67,29 @@
             <ListView id="attachment-list" fx:id="attachmentList" layoutY="555.0" orientation="HORIZONTAL" prefHeight="111.0" prefWidth="508.0" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="composePane" layoutX="492.0" layoutY="159.0" prefHeight="200.0" prefWidth="508.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="492.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane id="composer-pane" fx:id="composePane" layoutX="492.0" layoutY="159.0" prefHeight="200.0" prefWidth="508.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="492.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HTMLEditor fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutY="120.0" prefHeight="484.0" prefWidth="508.0" />
-            <TextField fx:id="composeTo" layoutX="66.0" layoutY="42.0" prefHeight="32.0" prefWidth="420.0" />
-            <TextField fx:id="composeTitle" layoutX="66.0" layoutY="79.0" prefHeight="32.0" prefWidth="420.0" />
-            <Label layoutX="35.0" layoutY="49.0" text="To:" />
-            <Label layoutX="27.0" layoutY="86.0" text="Title:" />
-            <Button layoutX="420.0" layoutY="618.0" mnemonicParsing="false" onAction="#composeSendPressed" prefHeight="38.0" prefWidth="65.0" text="Send" />
-            <Button layoutX="330.0" layoutY="624.0" mnemonicParsing="false" text="Attachment" />
-            <Button layoutX="267.0" layoutY="624.0" mnemonicParsing="false" onAction="#composeCancel" text="Cancel" />
+            <HTMLEditor id="editor" fx:id="htmlEditor" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutY="86.0" prefHeight="518.0" prefWidth="508.0" />
+            <TextField id="field-send-to" fx:id="composeTo" layoutX="20.0" layoutY="13.0" prefHeight="26.0" prefWidth="469.0" promptText="to:">
+               <styleClass>
+                  <String fx:value="font-rockwell" />
+                  <String fx:value="font-grey" />
+               </styleClass></TextField>
+            <TextField id="field-title" fx:id="composeTitle" layoutX="20.0" layoutY="50.0" prefHeight="26.0" prefWidth="469.0" promptText="title:">
+               <styleClass>
+                  <String fx:value="font-rockwell" />
+                  <String fx:value="font-grey" />
+               </styleClass></TextField>
+            <ImageView fitHeight="41.0" fitWidth="148.0" layoutX="340.0" layoutY="619.0">
+               <image>
+                  <Image url="@../img/default/idle/composer-tools-box.png" />
+               </image>
+            </ImageView>
+            <Button id="send-key" layoutX="245.00000000000006" layoutY="428.00000000000006" mnemonicParsing="false" onAction="#composeSendPressed" prefHeight="45.0" prefWidth="45.0" stylesheets="@../css/themeDefault.css" AnchorPane.bottomAnchor="-179.20000000000005" AnchorPane.rightAnchor="-170.20000000000005" />
+            <Button id="attach-key" layoutX="183.00000000000006" layoutY="427.00000000000006" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" stylesheets="@../css/themeDefault.css" AnchorPane.bottomAnchor="-178.20000000000005" AnchorPane.rightAnchor="-108.20000000000005" />
+            <Button id="compose-cancel-key" layoutX="148.00000000000006" layoutY="427.00000000000006" mnemonicParsing="false" onAction="#composeCancel" prefHeight="30.0" prefWidth="30.0" stylesheets="@../css/themeDefault.css" AnchorPane.bottomAnchor="-178.20000000000005" AnchorPane.rightAnchor="-73.20000000000005" />
+            <ImageView id="compose-attached-icon" fx:id="composeAttachIcon" fitHeight="45.0" fitWidth="45.0" layoutX="10.0" layoutY="614.0" pickOnBounds="true" preserveRatio="true" />
+            <Line fx:id="footerDiv1" endX="336.5999755859375" layoutX="135.0" layoutY="604.0" startX="-99.4000244140625" strokeLineCap="ROUND" strokeWidth="2.0" styleClass="line" />
          </children>
       </AnchorPane>
       <AnchorPane id="account-pane" layoutY="474.0" prefHeight="70.0" prefWidth="190.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
@@ -102,5 +104,34 @@
             <Label fx:id="userEmailLabel" layoutX="8.0" layoutY="31.0" prefHeight="17.0" prefWidth="165.0" styleClass="font-rockwell" />
          </children>
       </AnchorPane>
+      <AnchorPane id="settings-pane" layoutX="4.0" prefHeight="30.0" prefWidth="492.0" AnchorPane.bottomAnchor="642.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="508.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <TextField id="search-bar" layoutX="226.0" layoutY="3.0" prefHeight="25.0" prefWidth="232.0">
+               <padding>
+                  <Insets left="20.0" />
+               </padding></TextField>
+            <Button id="settings-key" layoutX="462.0" layoutY="9.0" mnemonicParsing="false" prefHeight="390.0" prefWidth="0.0" />
+            <ImageView fitHeight="14.0" fitWidth="14.0" layoutX="230.0" layoutY="9.0">
+               <image>
+                  <Image url="@../img/default/idle/search-icon.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
+      <TreeView id="folder-view" fx:id="folderSelection" layoutY="113.0" prefHeight="491.0" prefWidth="190.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="113.0">
+         <styleClass>
+            <String fx:value="font-myriad" />
+            <String fx:value="font-white" />
+         </styleClass></TreeView>
+      <ListView id="email-cell-view" fx:id="emailSelection" focusTraversable="false" layoutX="190.0" prefHeight="674.0" prefWidth="302.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="30.0" />
+      <Pane id="compose-key-pane" layoutY="30.0" prefHeight="84.0" prefWidth="190.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="30.0">
+         <children>
+            <Button id="compose-key" layoutX="23.0" layoutY="23.0" mnemonicParsing="false" onAction="#composeKeyPressed" prefHeight="38.0" prefWidth="139.0" text="COMPOSE">
+               <styleClass>
+                  <String fx:value="font-rockwell" />
+                  <String fx:value="font-bold" />
+                  <String fx:value="font-white" />
+               </styleClass></Button>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
